Passwords settings EG tests: Scroll in short viewports

While passwords_settings_egtest.mm already uses scrolling to find some
elements, it is not applied consistently. This CL ensures that scrolling is
applied everywhere where needed, including tapping the "Settings" button, so
that the tests also pass on iPhone SE in landscape mode.

Bug: 717163,744058
Change-Id: Ifbc3438c78d47441c67a0d538a3895e2ed4a39b5
Reviewed-on: https://chromium-review.googlesource.com/573041
Reviewed-by: Mike Baxley <baxley@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Vaclav Brozek <vabr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487871}
Former-commit-id: 857e08190fa0f2b4a031b1ef98c74d4eebb52bc8